--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ include(VegaFEMMacros)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE OFF)
 option(VegaFEM_BUILD_MODEL_REDUCTION "Should model-reduction techniques be included?" ON)
+option(VegaFEM_ENABLE_ExpoKit_SUPPORT "Should matrix classes use ExpoKit for exponentiation?" OFF)
+option(VegaFEM_ENABLE_OpenMP_SUPPORT "Should OpenMP be used?" OFF)
 option(VegaFEM_ENABLE_OpenGL_SUPPORT "Should modules that require OpenGL be enabled?" ON)
 if (VegaFEM_ENABLE_OpenGL_SUPPORT)
   # Only add Cg support if OpenGL is turned on. This may change in the future.
@@ -141,7 +143,20 @@ if (VegaFEM_ENABLE_OpenGL_SUPPORT)
   endif()
   find_package(GLUI)
 endif()
+
+if(VegaFEM_ENABLE_OpenMP_SUPPORT)
+  find_package(OpenMP REQUIRED)
+  mark_as_advanced(OpenMP_C_FLAGS OpenMP_CXX_FLAGS)
+  #set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+  #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  #add_definitions(-DUSE_OPENMP)
+endif()
+
 if (VegaFEM_BUILD_MODEL_REDUCTION)
+  if (NOT APPLE)
+    # Need a vendor that provides headers.
+    set(BLA_VENDOR "ATLAS")
+  endif()
   find_package(BLAS REQUIRED)
   find_package(LAPACK REQUIRED)
   if (VegaFEM_ENABLE_Cg_SUPPORT)
