Need rule to install headers...
... now that they are not duplicated in the `include` directory.

--- a/src/libcamera/CMakeLists.txt
+++ b/src/libcamera/CMakeLists.txt
@@ -1,10 +1,7 @@
 vega_add_library(camera
-  SOURCES camera.cpp)
-target_include_directories(camera
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES camera.cpp
+  PUBLIC_HEADERS
+    camera.h
 )
 target_link_libraries(camera
   PUBLIC
