--- a/src/libclothBW/CMakeLists.txt
+++ b/src/libclothBW/CMakeLists.txt
@@ -5,12 +5,12 @@ set(clothbw_srcs
 )
 
 vega_add_library(clothbw
-  SOURCES ${clothbw_srcs})
-target_include_directories(clothbw
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    ${clothbw_srcs}
+  PUBLIC_HEADERS
+    clothBW.h
+    clothBWFromObjMesh.h
+    clothBWMT.h
 )
 target_link_libraries(clothbw
   PUBLIC
