--- a/src/libcorotationalLinearFEM/CMakeLists.txt
+++ b/src/libcorotationalLinearFEM/CMakeLists.txt
@@ -1,10 +1,10 @@
 vega_add_library(corotationalLinearFEM
-  SOURCES corotationalLinearFEM.cpp corotationalLinearFEMMT.cpp)
-target_include_directories(corotationalLinearFEM
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    corotationalLinearFEM.cpp
+    corotationalLinearFEMMT.cpp
+  PUBLIC_HEADERS
+    corotationalLinearFEM.h
+    corotationalLinearFEMMT.h
 )
 target_link_libraries(corotationalLinearFEM
   PUBLIC
