--- a/src/libglslPhong/CMakeLists.txt
+++ b/src/libglslPhong/CMakeLists.txt
@@ -1,10 +1,8 @@
 vega_add_library(glslPhong
-  SOURCES glslPhong.cpp)
-target_include_directories(glslPhong
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    glslPhong.cpp
+  PUBLIC_HEADERS
+    glslPhong.h
 )
 target_link_libraries(glslPhong
   PUBLIC
