--- a/src/libhashTable/CMakeLists.txt
+++ b/src/libhashTable/CMakeLists.txt
@@ -1,8 +1,6 @@
 vega_add_library(hashTable
-  SOURCES hashTable.cpp)
-target_include_directories(hashTable
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    hashTable.cpp
+  PUBLIC_HEADERS
+    hashTable.h
 )
