--- a/src/libloadList/CMakeLists.txt
+++ b/src/libloadList/CMakeLists.txt
@@ -1,8 +1,6 @@
 vega_add_library(loadList
-  SOURCES loadList.cpp)
-target_include_directories(loadList
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    loadList.cpp
+  PUBLIC_HEADERS
+    loadList.h
 )
