--- a/src/libmatrixIO/CMakeLists.txt
+++ b/src/libmatrixIO/CMakeLists.txt
@@ -1,7 +1,7 @@
-vega_add_library(matrixIO SOURCES matrixIO.cpp)
-target_include_directories(matrixIO
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(matrixIO
+  SOURCES
+    matrixIO.cpp
+  PUBLIC_HEADERS
+    matrixIO.h
+    matrixMacros.h
 )
