--- a/src/libreducedElasticForceModel/CMakeLists.txt
+++ b/src/libreducedElasticForceModel/CMakeLists.txt
@@ -1,20 +1,22 @@
-set(reducedelasticforcemodel_srcs
-  reducedLinearForceModel.cpp
-  reducedLinearStVKForceModel.cpp
-  reducedMassSpringSystemForceModel.cpp
-  reducedMassSpringSystemForceModelWithHessian.cpp
-  reducedSpringForceModel.cpp
-  reducedStVKForceModel.cpp
-  reducedStVKForceModelWithHessian.cpp
-  reducedSubspaceStVKForceModel.cpp
-)
-
-vega_add_library(reducedElasticForceModel SOURCES ${reducedelasticforcemodel_srcs})
-target_include_directories(reducedElasticForceModel
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(reducedElasticForceModel
+  SOURCES
+    reducedLinearForceModel.cpp
+    reducedLinearStVKForceModel.cpp
+    reducedMassSpringSystemForceModel.cpp
+    reducedMassSpringSystemForceModelWithHessian.cpp
+    reducedSpringForceModel.cpp
+    reducedStVKForceModel.cpp
+    reducedStVKForceModelWithHessian.cpp
+    reducedSubspaceStVKForceModel.cpp
+  PUBLIC_HEADERS
+    reducedLinearForceModel.h
+    reducedLinearStVKForceModel.h
+    reducedMassSpringSystemForceModel.h
+    reducedMassSpringSystemForceModelWithHessian.h
+    reducedSpringForceModel.h
+    reducedStVKForceModel.h
+    reducedStVKForceModelWithHessian.h
+    reducedSubspaceStVKForceModel.h
 )
 target_link_libraries(reducedElasticForceModel
   PUBLIC
