--- a/src/libsceneObject/CMakeLists.txt
+++ b/src/libsceneObject/CMakeLists.txt
@@ -1,26 +1,33 @@
 set(SCOBJ_SRCS
-   sceneObject.cpp
-	sceneObject6DOF.cpp
-   sceneObjectDeformable.cpp
-	sceneObjectDeformable6DOF.cpp
-   sceneObjectWithRestPosition.cpp
+  sceneObject.cpp
+  sceneObject6DOF.cpp
+  sceneObjectDeformable.cpp
+  sceneObjectDeformable6DOF.cpp
+  sceneObjectWithRestPosition.cpp
+)
+set(SCOBJ_HDRS
+  sceneObject.h
+  sceneObject6DOF.h
+  sceneObjectDeformable.h
+  sceneObjectDeformable6DOF.h
+  sceneObjectWithRestPosition.h
 )
 if(CG_LIBS)
 	set(SCOBJS_SRCS
 		${SCOBJS_SRCS}
 		sceneObjectDeformableGPU.cpp
 		sceneObjectDeformableGPU6DOF.cpp
-		)
+  )
+  set(SCOBJS_HDRS
+    ${SCOBJS_HDRS}
+    sceneObjectDeformableGPU.h
+    sceneObjectDeformableGPU6DOF.h
+  )
 endif(CG_LIBS)
 
 vega_add_library(sceneObject
   SOURCES ${SCOBJ_SRCS}
-)
-target_include_directories(sceneObject
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  PUBLIC_HEADERS ${SCOBJ_HDRS}
 )
 target_link_libraries(sceneObject
   PUBLIC
