--- a/src/libsceneObjectReduced/CMakeLists.txt
+++ b/src/libsceneObjectReduced/CMakeLists.txt
@@ -1,23 +1,31 @@
 set(sceneobjreduced_srcs
-	sceneObjectReduced.cpp
-	sceneObjectReduced6DOF.cpp
-	sceneObjectReducedCPU.cpp
-	sceneObjectReducedCPU6DOF.cpp
-	)
+  sceneObjectReduced.cpp
+  sceneObjectReduced6DOF.cpp
+  sceneObjectReducedCPU.cpp
+  sceneObjectReducedCPU6DOF.cpp
+)
+set(sceneobjreduced_hdrs
+  sceneObjectReduced.h
+  sceneObjectReduced6DOF.h
+  sceneObjectReducedCPU.h
+  sceneObjectReducedCPU6DOF.h
+)
 if(CG_LIBS)
-	set(sceneobjreduced_srcs
-		${sceneobjreduced_srcs}
-		sceneObjectReducedGPU.cpp
-		sceneObjectReducedGPU6DOF.cpp
-		)
+  set(sceneobjreduced_srcs
+    ${sceneobjreduced_srcs}
+    sceneObjectReducedGPU.cpp
+    sceneObjectReducedGPU6DOF.cpp
+  )
+  set(sceneobjreduced_hdrs
+    ${sceneobjreduced_hdrs}
+    sceneObjectReducedGPU.h
+    sceneObjectReducedGPU6DOF.h
+  )
 endif(CG_LIBS)
 
-vega_add_library(sceneObjectReduced SOURCES ${sceneobjreduced_srcs})
-target_include_directories(sceneObjectReduced
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-	  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(sceneObjectReduced
+  SOURCES ${sceneobjreduced_srcs}
+  PUBLIC_HEADERS ${sceneobjreduced_hdrs}
 )
 target_link_libraries(sceneObjectReduced
   PUBLIC
@@ -28,7 +36,7 @@ target_link_libraries(sceneObjectReduced
     sceneObject
 )
 if (VegaFEM_ENABLE_Cg_SUPPORT)
-	target_link_libraries(sceneObjectReduced
+  target_link_libraries(sceneObjectReduced
     PUBLIC
       objMeshGPUDeformer
   )
