--- a/src/libsparseMatrix/CMakeLists.txt
+++ b/src/libsparseMatrix/CMakeLists.txt
@@ -1,14 +1,10 @@
-set(SM_SRCS
-  sparseMatrix.cpp
-  sparseMatrixMT.cpp
-)
-
-vega_add_library(sparseMatrix SOURCES ${SM_SRCS})
-target_include_directories(sparseMatrix
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(sparseMatrix
+  SOURCES
+    sparseMatrix.cpp
+    sparseMatrixMT.cpp
+  PUBLIC_HEADERS
+    sparseMatrix.h
+    sparseMatrixMT.h
 )
 if(VegaFEM_ENABLE_OpenMP_SUPPORT)
   target_compile_definitions(sparseMatrix
