--- a/src/libstvk/CMakeLists.txt
+++ b/src/libstvk/CMakeLists.txt
@@ -1,22 +1,26 @@
-set(STVK_SRCS
- StVKCubeABCD.cpp
- StVKElementABCD.cpp
- StVKElementABCDLoader.cpp
- StVKHessianTensor.cpp
- StVKInternalForces.cpp
- StVKInternalForcesMT.cpp
- StVKStiffnessMatrix.cpp
- StVKStiffnessMatrixMT.cpp
- StVKTetABCD.cpp
- StVKTetHighMemoryABCD.cpp
-)
-
-vega_add_library(stvk SOURCES ${STVK_SRCS})
-target_include_directories(stvk
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(stvk
+  SOURCES
+    StVKCubeABCD.cpp
+    StVKElementABCD.cpp
+    StVKElementABCDLoader.cpp
+    StVKHessianTensor.cpp
+    StVKInternalForces.cpp
+    StVKInternalForcesMT.cpp
+    StVKStiffnessMatrix.cpp
+    StVKStiffnessMatrixMT.cpp
+    StVKTetABCD.cpp
+    StVKTetHighMemoryABCD.cpp
+  PUBLIC_HEADERS
+    StVKCubeABCD.h
+    StVKElementABCD.h
+    StVKElementABCDLoader.h
+    StVKHessianTensor.h
+    StVKInternalForces.h
+    StVKInternalForcesMT.h
+    StVKStiffnessMatrix.h
+    StVKStiffnessMatrixMT.h
+    StVKTetABCD.h
+    StVKTetHighMemoryABCD.h
 )
 target_link_libraries(stvk
   PUBLIC
