--- a/src/libvega-getopts/CMakeLists.txt
+++ b/src/libvega-getopts/CMakeLists.txt
@@ -1,8 +1,6 @@
 vega_add_library(vega-getopts
-  SOURCES getopts.cpp)
-target_include_directories(vega-getopts
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    getopts.cpp
+  PUBLIC_HEADERS
+    getopts.h
 )
