--- a/src/libconfigFile/CMakeLists.txt
+++ b/src/libconfigFile/CMakeLists.txt
@@ -1,8 +1,6 @@
 vega_add_library(configFile
-  SOURCES configFile.cpp)
-target_include_directories(configFile
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    configFile.cpp
+  PUBLIC_HEADERS
+    configFile.h
 )
