--- a/src/libforceModel/CMakeLists.txt
+++ b/src/libforceModel/CMakeLists.txt
@@ -1,10 +1,8 @@
 vega_add_library(forceModel
-  SOURCES forceModel.cpp)
-target_include_directories(forceModel
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    forceModel.cpp
+  PUBLIC_HEADERS
+    forceModel.h
 )
 target_link_libraries(forceModel
   PUBLIC
