--- a/src/libgraph/CMakeLists.txt
+++ b/src/libgraph/CMakeLists.txt
@@ -1,10 +1,8 @@
 vega_add_library(graph
-  SOURCES graph.cpp)
-target_include_directories(graph
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    graph.cpp
+  PUBLIC_HEADERS
+    graph.h
 )
 target_link_libraries(graph
   PUBLIC
