--- a/src/libimageIO/CMakeLists.txt
+++ b/src/libimageIO/CMakeLists.txt
@@ -1,8 +1,7 @@
 vega_add_library(imageIO
-  SOURCES imageIO.cpp)
-target_include_directories(imageIO
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    imageIO.cpp
+  PUBLIC_HEADERS
+    imageFormats.h
+    imageIO.h
 )
