--- a/src/libinsertRows/CMakeLists.txt
+++ b/src/libinsertRows/CMakeLists.txt
@@ -1,8 +1,6 @@
 vega_add_library(insertRows
-  SOURCES insertRows.cpp)
-target_include_directories(insertRows
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    insertRows.cpp
+  PUBLIC_HEADERS
+    insertRows.h
 )
