--- a/src/liblighting/CMakeLists.txt
+++ b/src/liblighting/CMakeLists.txt
@@ -1,10 +1,8 @@
 vega_add_library(lighting
-  SOURCES lighting.cpp)
-target_include_directories(lighting
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  SOURCES
+    lighting.cpp
+  PUBLIC_HEADERS
+    lighting.h
 )
 target_link_libraries(lighting
   PUBLIC
