--- a/src/libminivector/CMakeLists.txt
+++ b/src/libminivector/CMakeLists.txt
@@ -1,14 +1,13 @@
-set(MINIVEC_SRCS
-   mat3d.cpp
-   vec3d.cpp
-   vec2d.cpp
-   eig3.cpp
-)
-
-vega_add_library(minivector SOURCES ${MINIVEC_SRCS})
-target_include_directories(minivector
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(minivector
+  SOURCES
+    mat3d.cpp
+    vec3d.cpp
+    vec2d.cpp
+    eig3.cpp
+  PUBLIC_HEADERS
+    eig3.h
+    mat3d.h
+    minivector.h
+    vec2d.h
+    vec3d.h
 )
