--- a/src/libperformanceCounter/CMakeLists.txt
+++ b/src/libperformanceCounter/CMakeLists.txt
@@ -1,7 +1,6 @@
-vega_add_library(performanceCounter SOURCES performanceCounter.cpp)
-target_include_directories(performanceCounter
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(performanceCounter
+  SOURCES
+    performanceCounter.cpp
+  PUBLIC_HEADERS
+    performanceCounter.h
 )
