--- a/src/libquaternion/CMakeLists.txt
+++ b/src/libquaternion/CMakeLists.txt
@@ -1,9 +1,6 @@
-vega_add_library(quaternion SOURCES quaternion.cpp)
-target_include_directories(quaternion
-  PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(quaternion
+  SOURCES
+    quaternion.cpp
+  PUBLIC_HEADERS
+    quaternion.h
 )
