--- a/src/librenderVolumetricMesh/CMakeLists.txt
+++ b/src/librenderVolumetricMesh/CMakeLists.txt
@@ -1,9 +1,8 @@
-vega_add_library(renderVolumetricMesh SOURCES renderVolumetricMesh.cpp)
-target_include_directories(renderVolumetricMesh
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(renderVolumetricMesh
+  SOURCES
+    renderVolumetricMesh.cpp
+  PUBLIC_HEADERS
+    renderVolumetricMesh.h
 )
 target_link_libraries(renderVolumetricMesh
   PUBLIC
