--- a/src/libsparseSolver/CMakeLists.txt
+++ b/src/libsparseSolver/CMakeLists.txt
@@ -1,19 +1,22 @@
-set(SOLVER_SRCS
- linearSolver.cpp
- #ARPACKSolver.cpp
- PardisoSolver.cpp
- SPOOLESSolver.cpp
- SPOOLESSolverMT.cpp
- CGSolver.cpp
- invMKSolver.cpp
-)
-
-vega_add_library(sparseSolver SOURCES ${SOLVER_SRCS})
-target_include_directories(sparseSolver
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+vega_add_library(sparseSolver
+  SOURCES
+    #ARPACKSolver.cpp
+    linearSolver.cpp
+    PardisoSolver.cpp
+    SPOOLESSolver.cpp
+    SPOOLESSolverMT.cpp
+    CGSolver.cpp
+    invMKSolver.cpp
+  PUBLIC_HEADERS
+    #ARPACKSolver.h
+    CGSolver.h
+    PardisoSolver.h
+    SPOOLESSolver.h
+    SPOOLESSolverMT.h
+    invMKSolver.h
+    linearSolver.h
+    sparseSolverAvailability.h
+    sparseSolvers.h
 )
 target_link_libraries(sparseSolver
   PUBLIC
