Turn off model reduction.
... to see if it builds without BLAS/LAPACK.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ install:
 
 script:
  - mkdir ~/VegaFEM-build && cd ~/VegaFEM-build
- - ~/VegaFEM-deps/cmake/install/bin/cmake -G Ninja "-DSITE:STRING=travis-ci.org" "-DBUILDNAME:STRING=${TRAVIS_OS_NAME}-${CC}-Job.${TRAVIS_JOB_NUMBER}-SMTK" -DCMAKE_BUILD_TYPE:STRING=RelWithDebInfo -DVegaFEM_BUILD_MODEL_REDUCTION:BOOL=ON -DVegaFEM_ENABLE_OpenGL_SUPPORT:BOOL=ON -DVegaFEM_ENABLE_OpenMP_SUPPORT:BOOL=OFF "-DCMAKE_INSTALL_PREFIX=${HOME}/VegaFEM-install" ${TRAVIS_BUILD_DIR}
+ - ~/VegaFEM-deps/cmake/install/bin/cmake -G Ninja "-DSITE:STRING=travis-ci.org" "-DBUILDNAME:STRING=${TRAVIS_OS_NAME}-${CC}-Job.${TRAVIS_JOB_NUMBER}-SMTK" -DCMAKE_BUILD_TYPE:STRING=RelWithDebInfo -DVegaFEM_BUILD_MODEL_REDUCTION:BOOL=OFF -DVegaFEM_ENABLE_OpenGL_SUPPORT:BOOL=ON -DVegaFEM_ENABLE_OpenMP_SUPPORT:BOOL=OFF "-DCMAKE_INSTALL_PREFIX=${HOME}/VegaFEM-install" ${TRAVIS_BUILD_DIR}
  - ninja
  - ninja install
